--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,11 @@ dev_dependencies:
     sdk: flutter
   boxicons_flutter: any
   firebase_auth: any
-  firebase_database: any  
+  firebase_storage: any
+  firebase_database: any
+  cloud_firestore: any  
+  image_picker: any
+  image_cropper: any
 
 
 # For information on the generic Dart part of this file, see the
