--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dev_dependencies:
   firebase_auth: any
   firebase_storage: any
   firebase_database: any
-  cloud_firestore: any  
+  cloud_firestore: ^0.10.1 
   image_picker: any
   image_cropper: any
 
