--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dev_dependencies:
   image_picker: any
   image_cropper: any
   flutter_form_builder: ^3.0.1
+  font_awesome_flutter: ^8.4.0
+  google_sign_in: 4.0.1+3
 
 
 # For information on the generic Dart part of this file, see the
