--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dev_dependencies:
   flutter_form_builder: ^3.0.1
   font_awesome_flutter: ^8.4.0
   google_sign_in: 4.0.1+3
-
+  flushbar: ^1.3.1
+  shared_preferences: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -67,6 +68,8 @@ flutter:
     - assets/img/image_02.png
     - assets/img/fundo.png
     - assets/img/flutter-icon.png
+    - assets/images/default.png
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
