--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/img/fundo.png
     - assets/img/flutter-icon.png
     - assets/images/default.png
+    - assets/img/background.jpg
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
