--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/img/flutter-icon.png
     - assets/images/default.png
     - assets/img/background.jpg
+    - assets/images/loading.gif
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
